--- a/ksu-stan-tv-app/src/components/Carousel.scss
+++ b/ksu-stan-tv-app/src/components/Carousel.scss
@@ -1,25 +1,33 @@
 .container {
-  width: 100%;
-  height: 200px;
+  width: 50%;
+  height: 300px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 .items-container {
   display: flex;
   gap: 10px;
-  pointer-events: none;
   position: absolute;
   top: 0;
   left: 0;
+  height: 200px;
 }
 
 .item {
-  height: 200px;
-  width: 200px;
+  height: auto;
+  width: 180px;
   border-radius: 5px;
   background-color: lightgrey;
+
+  img {
+    width: 100%;
+  }
+
+  a {
+    display: block;
+  }
 }
