--- a/ksu-stan-tv-app/src/App.css
+++ b/ksu-stan-tv-app/src/App.css
@@ -1,8 +1,3 @@
-@media screen and (min-width: 720px) {
-  /* #leftsidebar {width: 200px; float: left;} */
-  /* #main {margin-left: 216px;} */
-}
-
 .skeleton {
   animation: skeleton-loading 1s linear infinite alternate;
 }
@@ -29,4 +24,14 @@
 
 .skeleton-footer {
   width: 30%;
+}
+
+.carousel-section {
+  position: relative;
+  padding: 12px;
+}
+
+.app-template {
+  display: flex;
+  flex-direction: column;
 }
