--- a/ksu-stan-tv-app/src/components/Carousel.scss
+++ b/ksu-stan-tv-app/src/components/Carousel.scss
@@ -1,12 +1,16 @@
 .container {
-  width: 50%;
+  width: 100%;
   height: 300px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
   overflow-x: scroll;
   scrollbar-width: none;
+
+  @media screen and (min-width: 1080px) {
+    width: 70%;
+  }
 }
 
 .items-container {
@@ -22,7 +26,6 @@
   height: auto;
   width: 180px;
   border-radius: 5px;
-  // background-color: lightgrey;
   padding: 8px;
 
   img {
