--- a/ksu-stan-tv-app/src/components/Carousel.scss
+++ b/ksu-stan-tv-app/src/components/Carousel.scss
@@ -1,19 +1,12 @@
-.container {
+.carousel-container {
   width: 100%;
-  height: 300px;
+  min-height: 300px;
   position: absolute;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
   overflow-x: scroll;
   scrollbar-width: none;
-
-  @media screen and (min-width: 1080px) {
-    width: 70%;
-  }
 }
 
-.items-container {
+.carousel-items-container {
   display: flex;
   gap: 10px;
   position: absolute;
@@ -22,7 +15,7 @@
   height: 200px;
 }
 
-.item {
+.carousel-item {
   height: auto;
   width: 180px;
   border-radius: 5px;
