--- a/ksu-stan-tv-app/src/components/Header/header.scss
+++ b/ksu-stan-tv-app/src/components/Header/header.scss
@@ -1,38 +1,78 @@
 .app-header {
   display: flex;
-  flex-direction: colunm;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding: 24px;
+  padding: 0 8px;
+
+  @media screen and (min-width: 720px) {
+    padding: 24px;
+  }
 }
 
 .app-logo {
-  width: 150px;
-  display: block;
+  width: 60px;
+  display: flex;
+
+  @media screen and (min-width: 720px) {
+    width: 120px;
+  }
 
   img {
-    width: 100%;
+    width: 45px;
+
+    @media screen and (min-width: 720px) {
+      width: 100%;
+    }
   }
 }
 
 .app-nav {
+  position: relative;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  width: 100%;
+  height: 32px;
+
+  display: flex;
+  align-items: center;
+
+  @media screen and (min-width: 720px) {
+    overflow-x: unset;
+    height: 64px;
+  }
+}
+
+.app-nav-list {
   margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
-  flex-direction: colunm;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 
+  position: absolute;
+  top: 0;
+  left: 0;
+  @media screen and (min-width: 720px) {
+    position: unset;
+  }
+
   li {
-    padding: 10px 16px;
+    padding: 2px 8px;
+
+    @media screen and (min-width: 720px) {
+      padding: 10px 16px;
+    }
   }
   li,
   a {
     display: block;
     color: #cccccc;
-    font-size: 24px;
+    font-size: 1.2rem;
     text-decoration: none;
+    white-space: nowrap;
 
     &:active,
     &:hover {
