--- a/ksu-stan-tv-app/src/index.css
+++ b/ksu-stan-tv-app/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: "Open San";
+  font-family: "Open Sans";
   background-color: #000000;
   color: #ffffff;
+  font-size: 16px;
 }
